--- a/ecommerce.html
+++ b/ecommerce.html
@@ -5068,8 +5068,8 @@ function showOrderDetailByData(order) {
     order.訂單編號 = order.訂單編號 || ('ORD' + Date.now());
     order.訂購時間 = order.訂購時間 || new Date().toISOString();
     order.商品明細 = order.商品明細 || '';
-    // 🔥 匯款末五碼：只有 undefined/null 才補 '-'，空字串也保留（不覆蓋掉有效值）
-    if (order.匯款末五碼 === undefined || order.匯款末五碼 === null) order.匯款末五碼 = '-';
+    // 🔥 匯款末五碼：強制轉字串（GAS 可能回傳數字），null/undefined 補 '-'
+    order.匯款末五碼 = (order.匯款末五碼 !== undefined && order.匯款末五碼 !== null) ? String(order.匯款末五碼) : '-';
     order.付款方式 = order.付款方式 || '';
     order.取貨方式 = order.取貨方式 || '';
     order.訂單狀態 = order.訂單狀態 || '待處理';
